Update on ".github: Consolidate binary checkout logic"
Consolidates binary checkout logic to use the standard common logic we
have in our common templates. Also fixes issues related to
pytorch/builder trying to checkout the head commit for pytorch/pytorch
instead of checking out the builder commit we actually want

Signed-off-by: Eli Uriegas <eliuriegasfb.com>

[ghstack-poisoned]

--- a/.github/workflows/generated-linux-binary-conda.yml
+++ b/.github/workflows/generated-linux-binary-conda.yml
@@ -111,7 +111,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -263,7 +263,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -516,7 +516,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -669,7 +669,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -928,7 +928,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1084,7 +1084,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1343,7 +1343,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1499,7 +1499,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1758,7 +1758,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1914,7 +1914,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -2172,7 +2172,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -2324,7 +2324,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -2577,7 +2577,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -2730,7 +2730,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -2989,7 +2989,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -3145,7 +3145,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -3404,7 +3404,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -3560,7 +3560,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -3819,7 +3819,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -3975,7 +3975,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -4233,7 +4233,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -4385,7 +4385,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -4638,7 +4638,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -4791,7 +4791,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -5050,7 +5050,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -5206,7 +5206,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -5465,7 +5465,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -5621,7 +5621,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -5880,7 +5880,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -6036,7 +6036,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -6294,7 +6294,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -6446,7 +6446,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -6699,7 +6699,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -6852,7 +6852,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -7111,7 +7111,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -7267,7 +7267,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -7526,7 +7526,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -7682,7 +7682,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -7941,7 +7941,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -8097,7 +8097,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
