--- a/.github/workflows/generated-linux-binary-manywheel.yml
+++ b/.github/workflows/generated-linux-binary-manywheel.yml
@@ -111,7 +111,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -263,7 +263,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -516,7 +516,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -669,7 +669,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -928,7 +928,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1084,7 +1084,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1343,7 +1343,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1499,7 +1499,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1758,7 +1758,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1914,7 +1914,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -2173,7 +2173,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -2326,7 +2326,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -2580,7 +2580,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -2733,7 +2733,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -2986,7 +2986,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -3138,7 +3138,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -3391,7 +3391,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -3544,7 +3544,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -3803,7 +3803,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -3959,7 +3959,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -4218,7 +4218,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -4374,7 +4374,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -4633,7 +4633,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -4789,7 +4789,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -5048,7 +5048,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -5201,7 +5201,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -5455,7 +5455,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -5608,7 +5608,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -5861,7 +5861,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -6013,7 +6013,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -6266,7 +6266,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -6419,7 +6419,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -6678,7 +6678,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -6834,7 +6834,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -7093,7 +7093,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -7249,7 +7249,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -7508,7 +7508,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -7664,7 +7664,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -7923,7 +7923,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -8076,7 +8076,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -8330,7 +8330,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -8483,7 +8483,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -8736,7 +8736,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -8888,7 +8888,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -9141,7 +9141,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -9294,7 +9294,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -9553,7 +9553,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -9709,7 +9709,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -9968,7 +9968,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -10124,7 +10124,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -10383,7 +10383,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -10539,7 +10539,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -10798,7 +10798,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -10951,7 +10951,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -11205,7 +11205,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -11358,7 +11358,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
