--- a/.github/workflows/generated-windows-binary-libtorch-cxx11-abi.yml
+++ b/.github/workflows/generated-windows-binary-libtorch-cxx11-abi.yml
@@ -94,7 +94,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -196,7 +196,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -404,7 +404,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -506,7 +506,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -714,7 +714,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -816,7 +816,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1024,7 +1024,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1126,7 +1126,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1335,7 +1335,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1438,7 +1438,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1648,7 +1648,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1751,7 +1751,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1961,7 +1961,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -2064,7 +2064,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -2274,7 +2274,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -2377,7 +2377,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -2587,7 +2587,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -2690,7 +2690,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -2900,7 +2900,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -3003,7 +3003,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -3213,7 +3213,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -3316,7 +3316,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -3526,7 +3526,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -3629,7 +3629,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -3839,7 +3839,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -3942,7 +3942,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -4152,7 +4152,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -4255,7 +4255,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -4465,7 +4465,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -4568,7 +4568,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -4778,7 +4778,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -4881,7 +4881,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
