--- a/.github/workflows/generated-windows-binary-wheel.yml
+++ b/.github/workflows/generated-windows-binary-wheel.yml
@@ -90,7 +90,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -188,7 +188,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -389,7 +389,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -488,7 +488,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -690,7 +690,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -789,7 +789,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -991,7 +991,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1090,7 +1090,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1291,7 +1291,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1389,7 +1389,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1590,7 +1590,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1689,7 +1689,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1891,7 +1891,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -1990,7 +1990,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -2192,7 +2192,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -2291,7 +2291,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -2492,7 +2492,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -2590,7 +2590,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -2791,7 +2791,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -2890,7 +2890,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -3092,7 +3092,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -3191,7 +3191,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -3393,7 +3393,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -3492,7 +3492,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -3693,7 +3693,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -3791,7 +3791,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -3992,7 +3992,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -4091,7 +4091,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -4293,7 +4293,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -4392,7 +4392,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -4594,7 +4594,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
@@ -4693,7 +4693,7 @@ jobs:
       - name: Checkout pytorch/builder
         uses: zhouzhuojie/checkout@05b13c9a0d21f08f6d5e64a1d5042246d13619d9
         with:
-          ref: master
+          ref: main
           submodules: recursive
           repository: pytorch/builder
           path: builder
